--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "~2.3.1",
     "react-native-redash": "^16.2.3",
+    "react-native-safari-view": "^2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-sse": "^1.1.0",
@@ -136,6 +137,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-keyboard-spacer": "^0.4.2",
+    "@types/react-native-safari-view": "^2.0.5",
     "@types/react-native-vector-icons": "^6.4.10",
     "@types/utf8": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
