EAS updates setup

--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
       "backgroundColor": "#0A2138"
     },
     "updates": {
-      "fallbackToCacheTimeout": 0
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/653ea46f-9f69-4240-8fc2-a3ef10e74cfb"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -33,19 +34,31 @@
       "config": {
         "usesNonExemptEncryption": false
       },
-      "bundleIdentifier": "com.minkeapp.minkewallet"
+      "bundleIdentifier": "com.minkeapp.minkewallet",
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "The app accesses your photos to let you share them with your friends.",
+        "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access your camera",
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "versionCode": 52
+      "versionCode": 52,
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "description": "",
-    "userInterfaceStyle": "automatic"
+    "userInterfaceStyle": "automatic",
+    "runtimeVersion": "1.0.0"
   }
 }
