BlankStates bug fixed

--- a/app.json
+++ b/app.json
@@ -33,14 +33,26 @@
       "config": {
         "usesNonExemptEncryption": false
       },
-      "bundleIdentifier": "com.minkeapp.minkewallet"
+      "bundleIdentifier": "com.minkeapp.minkewallet",
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "The app accesses your photos to let you share them with your friends.",
+        "NSCameraUsageDescription": "Allow $(PRODUCT_NAME) to access your camera",
+        "NSMicrophoneUsageDescription": "Allow $(PRODUCT_NAME) to access your microphone"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "versionCode": 52
+      "versionCode": 52,
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.minkeapp.minkewallet"
     },
     "web": {
       "favicon": "./assets/favicon.png"
