--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@tradle/react-native-http": "^2.0.1",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-shape": "^3.0.2",
-    "@walletconnect/client": "^1.7.8",
+    "@walletconnect/client": "^1.8.0",
+    "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/react-native-dapp": "^1.7.8",
     "alchemy-sdk": "^2.0.2",
     "assert": "^1.5.0",
