--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@walletconnect/client": "^1.8.0",
     "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/react-native-dapp": "^1.7.8",
+    "@walletconnect/utils": "^1.8.0",
     "alchemy-sdk": "^2.0.2",
     "assert": "^1.5.0",
     "axios": "^0.26.1",
