Fix Wallet Connect on Android

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
       <category android:name="android.intent.category.BROWSABLE"/>
       <data android:scheme="https"/>
     </intent>
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="wc"/>
+		</intent>
   </queries>
   <application
     android:name=".MainApplication"
