Starting gas payments with stables

--- a/.env.sample
+++ b/.env.sample
@@ -33,3 +33,5 @@ MOONPAY_API_URL=SAMPLE
 MOONPAY_API_KEY=SAMPLE
 MOONPAY_SECRET_KEY=SAMPLE
 OPENSEA_API_KEY=SAMPLE
+QUICK_NODE_API_URL_BSC_MAINNET=SAMPLE
+BICONOMY_API_KEY_BSC_MAINNET=SAMPLE
