--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,6 +20,8 @@ buildscript {
     }
 }
 
+def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
+
 allprojects {
     repositories {
         mavenLocal()
@@ -41,4 +43,11 @@ allprojects {
         maven { url 'https://www.myget.org/F/storyteller-android-sdk/maven' }
         jcenter()
     }
+		configurations.all {
+				resolutionStrategy {
+						// Remove this override in 0.65+, as a proper fix is included in react-native itself.
+						force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
+				}
+    }
+
 }
