--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "string_decoder": "^0.10.31",
     "timers-browserify": "^1.4.2",
     "tty-browserify": "0.0.0",
+    "twitter-lite": "^1.1.0",
     "url": "^0.10.3",
     "utf8": "^3.0.0",
     "util": "^0.10.4",
