--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "@types/d3-scale": "^4.0.2",
     "@types/d3-shape": "^3.0.2",
     "@types/socket.io-client": "^1.4.36",
-    "@walletconnect/client": "^1.7.8",
-    "@walletconnect/react-native-dapp": "^1.7.8",
+    "@types/text-encoding": "^0.0.36",
+    "@walletconnect/core": "^2.7.0",
+    "@walletconnect/utils": "^2.7.0",
+    "@walletconnect/web3wallet": "^1.5.1",
     "alchemy-sdk": "^2.0.2",
     "assert": "^1.5.0",
     "axios": "^0.26.1",
     "babel-plugin-inline-dotenv": "^1.6.0",
+    "big-integer": "^1.6.51",
     "bignumber.js": "^9.0.2",
     "bip39": "^3.0.4",
     "browserify-zlib": "^0.1.4",
@@ -124,6 +127,7 @@
     "socket.io-client": "2.3.1",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^0.10.31",
+    "text-encoding": "^0.7.0",
     "timers-browserify": "^1.4.2",
     "tty-browserify": "0.0.0",
     "twitter-lite": "^1.1.0",
