--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@apollo/client": "3.2.4",
     "@biconomy/mexa": "^2.0.31",
     "@coingecko/cryptoformat": "^0.5.4",
-    "@ethersproject/shims": "^5.4.0",
+    "@ethersproject/shims": "^5.7.0",
     "@ethersproject/wallet": "^5.4.0",
     "@expo-google-fonts/inter": "^0.2.0",
     "@expo/vector-icons": "^12.0.0",
@@ -32,8 +32,10 @@
     "@types/socket.io-client": "^1.4.36",
     "@types/text-encoding": "^0.0.36",
     "@walletconnect/core": "^2.7.0",
+    "@walletconnect/jsonrpc-types": "^1.0.2",
     "@walletconnect/utils": "^2.7.0",
-    "@walletconnect/web3wallet": "^1.5.1",
+    "@walletconnect/react-native-compat": "^2.4.9",
+    "@walletconnect/web3wallet": "^1.4.0",
     "alchemy-sdk": "^2.0.2",
     "assert": "^1.5.0",
     "axios": "^0.26.1",
@@ -52,7 +54,7 @@
     "domain-browser": "^1.2.0",
     "ethereum-blockies-base64": "^1.0.2",
     "ethereumjs-util": "^7.1.1",
-    "ethers": "^5.4.7",
+    "ethers": "5.4",
     "events": "^3.3.0",
     "evm-bn": "^1.1.1",
     "expo": "^44.0.0",
@@ -73,6 +75,7 @@
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "fast-text-encoding": "^1.0.6",
     "global": "^4.4.0",
     "https-browserify": "0.0.1",
     "i18n-js": "^3.9.2",
@@ -127,7 +130,6 @@
     "socket.io-client": "2.3.1",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^0.10.31",
-    "text-encoding": "^0.7.0",
     "timers-browserify": "^1.4.2",
     "tty-browserify": "0.0.0",
     "twitter-lite": "^1.1.0",
