--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
     "react-native-ux-cam": "^5.4.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0",
+    "react-native-webview": "git+https://github.com/status-im/react-native-webview.git#refs/tags/v11.16.0-status",
     "readable-stream": "^3.6.0",
     "rn-nodeify": "^10.3.0",
     "socket.io-client": "2.3.1",
@@ -159,7 +159,8 @@
     "typescript": "~4.3.5"
   },
   "resolutions": {
-    "react-native-svg": "12.1.1"
+    "react-native-svg": "12.1.1",
+    "@types/react": "17.0.1"
   },
   "private": true,
   "name": "crypto-bank",
