--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "react-native-device-info": "^9.0.2",
     "react-native-dotenv": "^3.3.1",
     "react-native-fs": "2.16.6",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "2.9.0",
     "react-native-get-random-values": "~1.7.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "8.0.0",
@@ -117,7 +117,7 @@
     "react-native-ux-cam": "^5.4.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0",
+    "react-native-webview": "11.22.7",
     "readable-stream": "^3.6.0",
     "rn-nodeify": "^10.3.0",
     "stream-browserify": "^3.0.0",
