--- a/.env.sample
+++ b/.env.sample
@@ -36,3 +36,4 @@ OPENSEA_API_KEY=SAMPLE
 QUICK_NODE_API_URL_BSC_MAINNET=SAMPLE
 UNSTOPPABLE_DOMAINS_API_KEY=SAMPLE
 ZERION_API_TOKEN=SAMPLE
+ZERO_X_API_KEY=SAMPLE
