--- a/eas.json
+++ b/eas.json
@@ -21,7 +21,7 @@
 				"autoIncrement": "buildNumber"
 			},
 			"android": {
-				"image": "latest",
+				"image": "ubuntu-18.04-jdk-11-ndk-r19c",
 				"autoIncrement": "versionCode"
 			},
 			"node": "16.18.1"
